--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <span class="tanggalHariIni text-sm text-green-800"></span>
                             </div>
                             <!-- <iframe id="iframe" title="prayerWidget" class="w-full h-72" scrolling="no" src="https://www.islamicfinder.org/prayer-widget/1643837/shafi/11/0/20.0/18.0"> </iframe> -->
-                            <div class="px-2 text-xs sm:text-base" id="divJadwalSholat"></div>
+                            <div class="px-2" id="divJadwalSholat"></div>
                         </div>
                         <div class="relative w-6/12 h-full bg-white/80 rounded-2xl shadow-black/30 shadow-lg overflow-hidden transition-all duration-300">
                             <h1 class="font-bold text-base sm:text-lg text-center p-1">Pengumuman</h1>
