--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BTM Turobunnur Sipatana</title>
-        <link rel="icon" href="assets/images/icon.png" type="image/png">
-        <!-- <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> -->
+        <link rel="icon" href="images/icon.png" type="image/png">
         <style>
             ::-webkit-scrollbar {
                 display: none;
@@ -36,7 +31,6 @@
         </style>
     </head>
     <body>
-        <!-- <h1>Turobunnurri</h1> -->
         <iframe src="https://turobunnuur-sipatana.vercel.app/" frameborder="0" class="w-full h-60"></iframe>
     </body>
 </html>
